// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation renders correctly - navigation bottom center 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 17.91 15.39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="horizontal-align-center vertical-align-bottom css-1i8jwq0"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        viewBox="0 0 13.37 13.37"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center center 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 17.91 15.39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="horizontal-align-center vertical-align-center css-1i8jwq0"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        viewBox="0 0 13.37 13.37"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center left 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 17.91 15.39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="horizontal-align-left vertical-align-center css-1i8jwq0"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        viewBox="0 0 13.37 13.37"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation center right 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 17.91 15.39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="horizontal-align-right vertical-align-center css-1i8jwq0"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        viewBox="0 0 13.37 13.37"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`Navigation renders correctly - navigation top center 1`] = `
<div>
  <button
    className="css-0"
    id="nav-link"
    onClick={[Function]}
  >
    <svg
      viewBox="0 0 17.91 15.39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h17.91v1H0zM0 7.2h17.91v1H0zM0 14.39h17.91v1H0z"
        fill="#f1f1f1"
      />
    </svg>
  </button>
  <div
    className="horizontal-align-center vertical-align-top css-1i8jwq0"
    id="menu"
  >
    <button
      className="css-0"
      id="nav-close"
      onClick={[Function]}
    >
      <svg
        viewBox="0 0 13.37 13.37"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.37.71L12.66 0 6.68 5.98.71 0 0 .71l5.98 5.97L0 12.66l.71.71 5.97-5.98 5.98 5.98.71-.71-5.98-5.98L13.37.71z"
          fill="#f1f1f1"
        />
      </svg>
    </button>
    <nav>
      <ul
        className="css-0"
      >
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            title="Title"
            to="#"
          >
            Menu Entry 1
          </Link>
        </li>
        <li>
          <Link
            activeClassName="active"
            className="css-0"
            target="Target"
            to="#"
          >
            Menu Entry 2
          </Link>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
